--- a/call4papers.html
+++ b/call4papers.html
@@ -528,42 +528,41 @@ header, .context-menu, .megamenu-content, footer{
 	Call for Papers: IEEE </span><a href='https://2021.ieeeicme.org/'><span>ICME2021</span></a><span> Special Issue</span></font></center></h1>
 	
 	<h3><a name="ieee-transactions-on-multimedia-special-issue-on-font-colorbluelearning-from-noisy-multimedia-datafont" class="md-header-anchor"></a><span>
-	IEEE International Conference on Multimedia and Expo Special Issue on </span> <br /> <font color=blue><span>Advanced Representation Learning for Robust Multimedia Image Understanding</span></font></h3>
+	IEEE International Conference on Multimedia and Expo Special Issue on </span> <br /> <font color=blue><span>Advanced Representation Learning for Robust Multimedia Image Understanding</span></font></h3><p>&nbsp;</p>
 	
 	<h4><a name="abstract" class="md-header-anchor"></a><span>Abstract</span></h4>
-	<p><span>With the development of computing power and deep learning algorithms, we can process and apply millions or even hundreds of millions of large-scale data to train robust models. Nevertheless, constructing a million-scale dataset like ImageNet is time-consuming and labor-intensive. Fortunately, web data are rich and free resources. For arbitrary categories, the potential training data can be easily obtained from the web (e.g., search engines such as Google and Bing, Twitter, Instagram, and short video sharing applications). Moreover, with the development of the Internet, web data consist of much richer modality, such as text, audio, image, and video. It is consequently natural to leverage the large-scale yet noisy data on the web to automatically construct various types of datasets. However, there are two critical issues in the automatically collected datasets: “label noise” and “domain mismatch”. Learning directly from noisy web data tends to have poor performance.</span></p>
-	<p><span>This special issue serves as a forum for researchers all over the world to discuss their works and recent advances in learning from noisy web data. Both state-of-the-art articles, as well as comprehensive literature reviews, are welcome for submission. To provide readers of the special issue with an understanding of the most current issues in this field, we will invite one survey paper, which will undergo peer review. Papers addressing interesting real-world multimedia as well as computer vision applications are especially encouraged.</span></p><p>&nbsp;</p>
+	<p><span>Representation learning has always been an important research area in pattern recognition. A good representation of practical data is critical to achieve satisfactory performance. Broadly speaking, such presentation can be ``intra-data representation’’ or ``inter-data representation’’. Intra-data representation focuses on extracting or refining the raw feature of data point itself. Representative methods range from the early-staged hand-crafted feature design (e.g. SIFT, LBP, HoG, etc.), to the feature extraction (e.g. PCA, LDA, LLE, etc.) and feature selection (e.g. sparsity-based and submodulariry-based methods) in the past two decades, until the recent deep neural networks (e.g. CNN, RNN, etc.). Inter-data representation characterizes the relationship between different data points or the structure carried out by the dataset. For example, metric learning, kernel learning and causality reasoning investigate the spatial or temporal relationship among different examples, while subspace learning, manifold learning and clustering discover the underlying structural property inherited by the dataset.</span></p>
+	<p><span>Above analyses reflect that representation learning covers a wide range of research topics related to pattern recognition. On one hand, many new algorithms on representation learning are put forward every year to cater for the needs of processing and understanding various practical multimedia data. On the other hand, massive problems regarding representation learning still remain unsolved, especially for the big data and noisy data. Thereby, the objective of this special issue is to provide a stage for researchers all over the world to publish their latest and original results on representation learning.</span></p><p>&nbsp;</p>
 	
 	<h4><a name="scope" class="md-header-anchor"></a><span>Scope</span></h4>
-	<p><span>The special issue seeks original contributions which address the challenges in learning from noisy multimedia data. Possible topics include but are not limited to:</span></p>
+	<p><span>Possible topics include but are not limited to:</span></p>
 	<ul>
-		<li><span>Webly supervised visual classification, detection, segmentation, and feature learning</span></li>
-		<li><span>Large-scale/web-scale noisy data learning systems</span></li>
-		<li><span>Label noise in deep learning, theoretical analysis, and application</span></li>
-		<li><span>Automatic image dataset construction and application</span></li>
-		<li><span>Multi-modality theoretical analysis and application</span></li>
-		<li><span>Data augmentation theoretical analysis and application</span></li>
-		<li><span>Transfer learning across labeled and web data</span></li>
-		<li><span>New datasets and benchmarks for webly supervised learning</span></li></ul><p>&nbsp;</p>
+		<li><span>Metric learning and kernel learning</span></li>
+		<li><span>Robust representation and coding</span></li>
+		<li><span>Probabilistic Graphical Models</span></li>
+		<li><span>Deep learning</span></li>
+		<li><span>Multi-view/Multi-modal learning</span></li>
+		<li><span>Domain transfer learning</span></li>
+		<li><span>Unsupervised, semi-supervised, and supervised representation learning</span></li>
+		<li><span>Applications of advanced representation learning</span></li></ul><p>&nbsp;</p>
 	
 	<h4><a name="important-dates" class="md-header-anchor"></a><span>Important Dates</span></h4>
 	<ul>
-		<li><span>Paper submission due:  </span><span>	</span><span>   </span><span>	</span><span>  </span><span>	</span><span>    </span><font color=red><strong><span>Jan. 31, 2021</span></strong></font></li>
-		<li><span>First review notification: </span><span>			</span><span>Mar. 15, 2021</span></li>
-		<li><span>Revision due: </span><span>				</span><span>                May 15, 2021</span></li>
-		<li><span>Second review notification: </span><span>	</span><span>    Jun. 15, 2021</span></li>
+		<li><span>Regular Paper submission (including Special Sessions):  </span><span>	</span><span>   </span><span>	</span><span>  </span><span>	</span><span>    </span><font color=red><strong><span>Nov. 29, 2020</span></strong></font></li>
+		<li><span>Submission of papers to workshops and other tracks: </span><span>			</span><span>Mar. 13, 2021</span></li>
+		<li><span>Industry/Application track paper submission: </span><span>				</span><span>                Mar. 22, 2021</span></li>
+		<!--<li><span>Second review notification: </span><span>	</span><span>    Jun. 15, 2021</span></li>
 		<li><span>Final version due:                        Aug. 30, 2021</span></li>
-		<li><span>Publication date: </span><span>		</span><span>                    Early, 2022</span></li></ul><p>&nbsp;</p>
+		<li><span>Publication date: </span><span>		</span><span>                    Early, 2022</span></li></ul><p>&nbsp;</p>-->
 	
-	<h4><a name="guest-editors" class="md-header-anchor"></a><span>Guest Editors</span></h4>
-	<p><span>Jian Zhang, </span><a href='mailto:jian.zhang@uts.edu.au'><span>jian.zhang@uts.edu.au</span></a><span>, University of Technology Sydney, Australia </span><strong><span>(Lead Editor)</span></strong></p>
-	<p><span>Alan Hanjalic, </span><a href='mailto:A.Hanjalic@tudelft.nl'><span>A.Hanjalic@tudelft.nl</span></a><span>, Delft University of Technology, The Netherlands</span></p>
-	<p><span>Ramesh Jain, </span><a href='mailto:jain@ics.uci.edu' target='_blank' class='url'>jain@ics.uci.edu</a><span>, University of California - Irvine, CA, USA </span></p>
-	<p><span>Xiansheng Hua, </span><a href='mailto:huaxiansheng@gmail.com' target='_blank' class='url'>huaxiansheng@gmail.com</a><span>, DAMO Academy, Alibaba Group, Hangzhou, China</span></p>
-	<p><span>Yazhou Yao, </span><a href='mailto:yazhou.yao@njust.edu.cn' target='_blank' class='url'>yazhou.yao@njust.edu.cn</a><span>, Nanjing University of Science and Technology, China</span></p>
-	<p><span>Dan Zeng, </span><a href='mailto:dzeng@shu.edu.cn' target='_blank' class='url'>dzeng@shu.edu.cn</a><span>, Shanghai University, China</span></p><p>&nbsp;</p>
+	<h4><a name="organizers" class="md-header-anchor"></a><span>Organizers</span></h4>
+	<p><span>Guangwei Gao, </span><a href='mailto:csggao@gmail.com'><span>csggao@gmail.com</span></a><span>, Nangjing University of Posts and Telecommunications, China </span><strong><span>(Lead Editor)</span></strong></p>
+	<p><span>Junjun Jiang, </span><a href='mailto:jiangjunjun@hit.edu.cn'><span>jiangjunjun@hit.edu.cn</span></a><span>, Harbin Institute of Technology, China</span></p>
+	<p><span>Licheng Liu, </span><a href='mailto:lichenghnu@gmail.com' target='_blank' class='url'>lichenghnu@gmail.com</a><span>, Hunan University, China </span></p>
+	<p><span>Tao Lu, </span><a href='mailto:lutxyl@gmail.com' target='_blank' class='url'>lutxyl@gmail.com</a><span>, Wuhan Institute of Technology, China</span></p>
+	<p><span>Jingang Shi, </span><a href='mailto:jingang.shi@hotmail.com' target='_blank' class='url'>jingang.shi@hotmail.com</a><span>, Xi'an Jiaotong University, China</span></p><p>&nbsp;</p>
 	
-	<h4><a name="submission-procedure" class="md-header-anchor"></a><span>Submission Procedure</span></h4>
-	<p><span>Papers should be formatted according to the IEEE Transactions on Multimedia guidelines for authors (</span><a href='http://www.signalprocessingsociety.org/tmm/tmm-author-info/' target='_blank' class='url'>http://www.signalprocessingsociety.org/tmm/tmm-author-info/</a><span>). By submitting/resubmitting your manuscript to these Transactions, you are acknowledging that you accept the rules established for publication of manuscripts, including an agreement to pay all over-length page charges, color charges, and any other charges and fees associated with the publication of the manuscript. Manuscripts (both 1-column and 2-column versions are required) should be submitted electronically through the online IEEE manuscript submission system at </span><a href='http://mc.manuscriptcentral.com/tmm-ieee' target='_blank' class='url'>http://mc.manuscriptcentral.com/tmm-ieee</a><span>. All submitted papers will go through the same review process as the regular TMM paper submissions. Referees will consider originality, significance, technical soundness, clarity of exposition, and relevance to the special issue topics above.</span></p><p>&nbsp;</p></div>
+	<h4><a name="comments" class="md-header-anchor"></a><span>Comments</span></h4>
+	<p><span>All papers will go through the same review process as the regular papers submitted to the main conference to ensure that the contributions are of high quality. If a special session has more than 5 papers being accepted, some of the papers will be moved to the regular paper sessions of the conference.</span></p><p>&nbsp;</p></div>
 </body>
 </html>
