--- a/call4papers.html
+++ b/call4papers.html
@@ -563,6 +563,7 @@ header, .context-menu, .megamenu-content, footer{
 	<p><span>Jingang Shi, </span><a href='mailto:jingang.shi@hotmail.com' target='_blank' class='url'>jingang.shi@hotmail.com</a><span>, Xi'an Jiaotong University, China</span></p><p>&nbsp;</p>
 	
 	<h4><a name="comments" class="md-header-anchor"></a><span>Comments</span></h4>
+        <p><span>All papers presented at ICME 2021 will be included in IEEE Xplore. The IEEE Transactions on Multimedia is partnering with IEEE ICME. Extended versions of the top-ranked ICME 2021 papers will be invited for submission and potential publication in the IEEE Transactions on Multimedia and IEEE Open Journal of Circuits and Systems. We invite authors to submit high-quality contributions aiming at taking part in this call and to have the opportunity to publish an extended ICME paper in this prestigious journal.</span></p>
 	<p><span>All papers will go through the same review process as the regular papers submitted to the main conference to ensure that the contributions are of high quality. If a special session has more than 5 papers being accepted, some of the papers will be moved to the regular paper sessions of the conference.</span></p><p>&nbsp;</p></div>
 </body>
 </html>
