--- a/call4papers.html
+++ b/call4papers.html
@@ -549,7 +549,7 @@ header, .context-menu, .megamenu-content, footer{
 	<h4><a name="important-dates" class="md-header-anchor"></a><span>Important Dates</span></h4>
 	<ul>
 		<li><span>Regular Paper submission (including Special Sessions):  </span><span>	</span><span>   </span><span>	</span><span>  </span><span>	</span><span>    </span><font color=red><strong><span>Nov. 29, 2020</span></strong></font></li>
-		<li><span>Submission of papers to workshops and other tracks: </span><span>	</span><span>		</span><span>Mar. 13, 2021</span></li>
+		<li><span>Submission of papers to workshops and other tracks: </span><span>	         	</span><span>Mar. 13, 2021</span></li>
 		<li><span>Industry/Application track paper submission: </span><span>				</span><span>                Mar. 22, 2021</span></li></ul><p>&nbsp;</p>
 		<!--<li><span>Second review notification: </span><span>	</span><span>    Jun. 15, 2021</span></li>
 		<li><span>Final version due:                        Aug. 30, 2021</span></li>
