--- a/call4papers.html
+++ b/call4papers.html
@@ -553,15 +553,15 @@ header, .context-menu, .megamenu-content, footer{
 		<li><span>Industry/Application track paper submission: </span><span>				</span><span>                Mar. 22, 2021</span></li></ul><p>&nbsp;</p>
 		<!--<li><span>Second review notification: </span><span>	</span><span>    Jun. 15, 2021</span></li>
 		<li><span>Final version due:                        Aug. 30, 2021</span></li>
-		<li><span>Publication date: </span><span>		</span><span>                    Early, 2022</span></li></ul><p>&nbsp;</p>-->
+		<li><span>Publication date: </span><span>		</span><span>                    Early, 2022</span></li></ul><p>&nbsp;</p>
 	
 	<h4><a name="organizers" class="md-header-anchor"></a><span>Organizers</span></h4>
-	<ul>
+	
 	<p><span>Guangwei Gao, </span><a href='mailto:csggao@gmail.com'><span>csggao@gmail.com</span></a><span>, Nangjing University of Posts and Telecommunications, China </span></strong></p>
 	<p><span>Junjun Jiang, </span><a href='mailto:jiangjunjun@hit.edu.cn'><span>jiangjunjun@hit.edu.cn</span></a><span>, Harbin Institute of Technology, China</span></p>
 	<p><span>Licheng Liu, </span><a href='mailto:lichenghnu@gmail.com' target='_blank' class='url'>lichenghnu@gmail.com</a><span>, Hunan University, China </span></p>
 	<p><span>Tao Lu, </span><a href='mailto:lutxyl@gmail.com' target='_blank' class='url'>lutxyl@gmail.com</a><span>, Wuhan Institute of Technology, China</span></p>
-	<p><span>Jingang Shi, </span><a href='mailto:jingang.shi@hotmail.com' target='_blank' class='url'>jingang.shi@hotmail.com</a><span>, Xi'an Jiaotong University, China</span></p></ul><p>&nbsp;</p>
+	<p><span>Jingang Shi, </span><a href='mailto:jingang.shi@hotmail.com' target='_blank' class='url'>jingang.shi@hotmail.com</a><span>, Xi'an Jiaotong University, China</span></p><p>&nbsp;</p>
 	
 	<h4><a name="comments" class="md-header-anchor"></a><span>Comments</span></h4>
         <p><span>All papers presented at ICME 2021 will be included in IEEE Xplore. The IEEE Transactions on Multimedia is partnering with IEEE ICME. Extended versions of the top-ranked ICME 2021 papers will be invited for submission and potential publication in the IEEE Transactions on Multimedia and IEEE Open Journal of Circuits and Systems. We invite authors to submit high-quality contributions aiming at taking part in this call and to have the opportunity to publish an extended ICME paper in this prestigious journal.</span></p>
