--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ visits = 1
 else
 visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
-document.write("您是第" + visits + "位访问本专题的！")
+document.write("访问量:" + visits )
 // -->
 </script>
 <table summary="Table for page layout." id="tlayout">
