--- a/index.html
+++ b/index.html
@@ -244,6 +244,22 @@ My research interests lie in machine learning, data mining, and learning-based v
 	<img src="imgjpg/CPSF.jpg" alt="CPSF" />
 	<img src="imgjpg/NJUPT.jpg" alt="NJUPT" />
 	<img src="imgjpg/kxjst.jpg" alt="kxjst" />
+	     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=faf9f9&w=300&t=tt&d=hvoHWGKZcyFl6zhd6aLhpusD9f4jQY_gzPG8UfsmW0I&co=1285d6'></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" integrity="sha3848gBf6Y4YYq7Jx97PIqmTwLPin4hxIzQw5aDmUg/DDhul9fFpbbLcLh3nTIIDJKhx" crossorigin="anonymous"></script>
+
+<script src="script.js"></script><table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px">
+              <br>
+              <p style="text-align:center;font-size:small;">
+              Last modified in Feb. 2022.
+              For the style of my personal website, Please refer to the wonderful page from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>.
+              <br>
+              </p>
+            </td>
+          </tr>
+        </tbody>
     </div>
 <script language=JavaScript>
 <!--
