--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ document.write("访问量:" + visits )
 </td>
 </tr>
  <div>
-	 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=faf9f9&w=300&t=tt&d=hvoHWGKZcyFl6zhd6aLhpusD9f4jQY_gzPG8UfsmW0I&co=1285d6'></script>
+	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cl=ffffff&w=a"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" integrity="sha3848gBf6Y4YYq7Jx97PIqmTwLPin4hxIzQw5aDmUg/DDhul9fFpbbLcLh3nTIIDJKhx" crossorigin="anonymous"></script>
 
