--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@ document.write("访问量:" + visits )
  <div>
 	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cl=ffffff&w=a"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" integrity="sha3848gBf6Y4YYq7Jx97PIqmTwLPin4hxIzQw5aDmUg/DDhul9fFpbbLcLh3nTIIDJKhx" crossorigin="anonymous"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" integrity="sha3848gBf6Y4YYq7Jx97PIqmTwLPin4hxIzQw5aDmUg/DDhul9fFpbbLcLh3nTIIDJKhx" crossorigin="anonymous"></script>
+-->
 
 <script src="script.js"></script><table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
