--- a/index.html
+++ b/index.html
@@ -305,12 +305,11 @@ document.write("访问量:" + visits )
 <!--Theme from <a href="https://www.cc.gatech.edu/~lsong/" target="_blank">Prof. Le Song</a>-->
 </td>
 </tr>
-
-<div>
-<script type='text/javascript' id='clustrmaps' style="width:200px;text-align:center;" src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=21d825&cmn=ff9500'></script>
+<p style="text-align:center;font-size:small;">
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=21d825&cmn=ff9500'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" integrity="sha3848gBf6Y4YYq7Jx97PIqmTwLPin4hxIzQw5aDmUg/DDhul9fFpbbLcLh3nTIIDJKhx" crossorigin="anonymous"></script>
 	<script src="script.js"></script><table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-</div>
+</p>
 
 </table>
 </body>
