--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@ document.write("访问量:" + visits )
 <!--Theme from <a href="https://www.cc.gatech.edu/~lsong/" target="_blank">Prof. Le Song</a>-->
 </td>
 </tr>
-<p style="margin:100px;width:400px;font-size:small;">
-	<br>2</br>
+<p style="left:300px;width:400px;font-size:small;position:absolute;">
+	<br>1</br>
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
 	
 </p>
