--- a/index.html
+++ b/index.html
@@ -251,6 +251,12 @@ My research interests lie in machine learning, data mining, and learning-based v
 
         </tbody>
     </div>
+
+	<div style="left:450px;width:300px;font-size:small;position:relative">
+		<br>1</br>
+	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
+
+	</div>
 <script language=JavaScript>
 <!--
 var caution = false
@@ -305,11 +311,7 @@ document.write("访问量:" + visits )
 <!--Theme from <a href="https://www.cc.gatech.edu/~lsong/" target="_blank">Prof. Le Song</a>-->
 </td>
 </tr>
-<p style="left:500px;width:400px;font-size:small;position:relative">
-	<br>1</br>
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
-	
-</p>
+
 
 </table>
 </body>
