--- a/index.html
+++ b/index.html
@@ -252,11 +252,12 @@ My research interests lie in machine learning, data mining, and learning-based v
         </tbody>
     </div>
 
-	<div style="left:450px;width:300px;font-size:small;position:relative">
-		<br>1</br>
+	<div style="left:500px;width:300px;font-size:small;position:relative">
+		<br>2</br>
 	<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
-
+  	</tbody>
 	</div>
+
 <script language=JavaScript>
 <!--
 var caution = false
