--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ My research interests lie in machine learning, data mining, and learning-based v
 	<img src="imgjpg/NJUPT.jpg" alt="NJUPT" />
 	<img src="imgjpg/kxjst.jpg" alt="kxjst" />
 	    
-	<div style="width:300px;text-align:center;font-size:small;">
-	 <br>2</br>
+	<div style="left:300px;width:300px;text-align:center;font-size:small;position:relative;">
+	 <br>1</br>
 	 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
         </div>    
         </tbody>
