--- a/index.html
+++ b/index.html
@@ -244,17 +244,22 @@ My research interests lie in machine learning, data mining, and learning-based v
 	<img src="imgjpg/CPSF.jpg" alt="CPSF" />
 	<img src="imgjpg/NJUPT.jpg" alt="NJUPT" />
 	<img src="imgjpg/kxjst.jpg" alt="kxjst" />
-	    
 	<div style="left:320px;width:300px;text-align:center;font-size:small;position:relative;">
-	 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
-         <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog"></script>
+	
 	</div>    
         </tbody>
-	
-
-
     </div>
-
+<table style="width:25%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+          <td style="padding:25px;width:25%;vertical-align:middle">
+            <p style="text-align:center;font-size:small;">
+<!--              <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=tt&d=SmVNKAru4SRtedjTqTTFYIJmNGoHTrBK5VOIsscudyM'></script>-->
+             <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
+         <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog"></script>
+            </p>
+          </td>
+        </tr>
+	</tbody></table>
 
 <script language=JavaScript>
 <!--
