--- a/index.html
+++ b/index.html
@@ -175,65 +175,11 @@ My research interests lie in machine learning, data mining, and learning-based v
 <!-- <img src="wordcloud-beta.jpg" alt="wordcloud" /> -->
 </div>
 
-    <!-- <div> -->
-        <!-- <h2><hr><a name="tutorials-workshops"></a>Workshops, Tutorials and Challenges</h2> -->
-        <!-- <ul> -->
-		   <!-- <li><p>ACML 2019 Workshop on <a href="http://www.acml-conf.org/2019/workshops/weakly-supervised/" target="_blank">Weakly-supervised Learning</a> (with Gang Niu, Quanming Yao, Giogio Patrini, Aditya Menon, Clayton Scott and Masashi Sugiyama).</p></li> -->
-		   <!-- <li><p>ACML 2019 Tutorial on <a href="http://www.acml-conf.org/2019/tutorials/tsang-han/" target="_blank">Towards Noisy Supervision: Problems, Theories, and Algorithms</a> (with Ivor W. Tsang).</p></li> -->
-		   <!-- <li><p>ACML 2019 Challenge on <a href="https://www.4paradigm.com/competition/autowsl2019" target="_blank">AutoML for Weakly-supervised Learning (AutoWSL)</a> (with Quanming Yao, Wei-Wei Tu, Isabelle Guyon, and Qiang Yang).</p></li> -->
-        <!-- </ul> -->
-    <!-- </div> -->
 
-
-
-<!--    <div>
-        <h2><hr><a name="talks"></a>Representative Talks</h2>
-        <ul>
-            <li><p>
-                Co-teaching<br>
-                <iframe width="230" height="150" src="https://www.youtube.com/embed/T3HNz2VXHMk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p></li>
-            <li><p>
-                Masking<br>
-                <iframe width="230" height="150" src="https://www.youtube.com/embed/T3HNz2VXHMk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p></li>
-            <li><p>
-               Towards Robust Deep Learning. Hong Kong Baptist University, Hong Kong, 2018.12, [<a href="https://www.comp.hkbu.edu.hk/v1/?page=seminars&id=497" target="_blank">link</a>].
-            </p></li>
-            <li><p>
-               Towards Robust Deep Learning. Fourth Paradigm Inc., China, 2018.11, [<a href="papers/slides_RDL.pdf" target="_blank">PDF</a>].
-            </p></li>
-            <li><p>
-                When Robust Deep Learning Meets Noisy Labels. University of Tokyo, Japan, 2018.10.
-            </p></li>
-            <li><p>
-                Robust Deep Learning with Noisy Labels. National University of Singapore, Singapore, 2018.9,
-                [<a href="https://aip.riken.jp/news/nussoc_jointws/" target="_blank">link</a>].
-            </p></li>
-             <li><p>
-                Robust Deep Learning with Noisy Labels. Nanjing University, China, 2018.9, [<a href="https://keysoftlab.nju.edu.cn/7d/0f/c1578a294159/page.htm" target="_blank">link</a>].
-            </p></li>
-            <li><p>
-                Learning from Imperfect Supervision. Hong Kong Baptist University, Hong Kong, 2018.5.
-            </p></li>
-        </ul>
-    </div>-->
 
  
 
-<!--        <div>
-        <h2><hr><a name="edu"></a>Sponsors</h2>
-        <ul>
-            <li><p>
-               Australian Research Council (2015.2 - 2019.2)<br>
-                My Ph.D. research is supported by ARC FT130100746, DP180100106 and LP150100671 (Prof. Tsang's grants).<br>
-            </p></li>
-            <li><p>
-                Global Business College of Australia (2018.8 - 2018.9)<br>
-                My KDD'18 related  research is supported by Global Business College of Australia (4,000 AUD).<br>
-            </p></li>
-        </ul>
-    </div>-->
+
 
     <div>
     <h2><hr><a name="sponsors"></a>Sponsors</h2>
@@ -247,17 +193,19 @@ My research interests lie in machine learning, data mining, and learning-based v
   
         </tbody>
     </div>
-</hr>
-<table style="width:25%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-        <tr>
-          <td style="padding:25px;width:25%;vertical-align:middle">
-            <p style="text-align:center;font-size:small;">
-             <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
-             <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog"></script>
-            </p>
-          </td>
-        </tr>
-	</tbody></table>
+    <div>
+	<h2><hr><a name="acess"></a>Acess Count</h2>
+	<table style="width:25%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		<tr>
+		  <td style="padding:25px;width:25%;vertical-align:middle">
+		    <p style="text-align:center;font-size:small;">
+		     <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=cbf0ff&w=a&t=tt&d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog&cmo=00b92d&cmn=ff9500&co=32aaff"></script>
+		     <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=x2u3PduOONe9Td3feD9UapQ38U9IKGjYFkugvJLdXog"></script>
+		    </p>
+		  </td>
+		</tr>
+		</tbody></table>
+     </div>
 
 <script language=JavaScript>
 <!--
